# liblod

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac
include/lod/: lod.h  lod_export.h
src/: lod.c  lod_private.h  std_io.c  std_io.h
